--- a/index.html
+++ b/index.html
@@ -1,23 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My GitHub Page</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Welcome to My GitHub Page</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      text-align: center;
-      padding-top: 100px;
+    /* Basic Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
+
+    body {
+      background: linear-gradient(135deg, #6a11cb, #2575fc);
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .container {
+      background: rgba(0,0,0,0.4);
+      padding: 40px 60px;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+      max-width: 600px;
+      width: 100%;
+      transition: transform 0.3s ease;
+    }
+
+    .container:hover {
+      transform: scale(1.05);
+    }
+
     h1 {
-      color: #333;
+      font-size: 3rem;
+      margin-bottom: 20px;
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.5);
+    }
+
+    p {
+      font-size: 1.3rem;
+      margin-bottom: 30px;
+      line-height: 1.6;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+    }
+
+    a.btn {
+      display: inline-block;
+      background: #ff4081;
+      color: white;
+      padding: 15px 30px;
+      border-radius: 50px;
+      text-decoration: none;
+      font-weight: 600;
+      box-shadow: 0 4px 12px rgba(255, 64, 129, 0.5);
+      transition: background 0.3s ease;
+    }
+
+    a.btn:hover {
+      background: #e73370;
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 2rem;
+      }
+      .container {
+        padding: 30px 20px;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Hello World!</h1>
-  <p>This is my first static site hosted on GitHub Pages.</p>
+  <div class="container">
+    <h1>Welcome to My GitHub Page!</h1>
+    <p>This is my first fully styled static site hosted on GitHub Pages.</p>
+    <a href="https://github.com/debasish-87" target="_blank" class="btn">Visit My GitHub</a>
+  </div>
 </body>
 </html>
