--- a/index.html
+++ b/index.html
@@ -1,86 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Welcome to My GitHub Page</title>
-  <style>
-    /* Basic Reset */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>GitHub Pages Site</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
+<style>
+  /* Reset */
+  * {
+    margin: 0; padding: 0; box-sizing: border-box; 
+    font-family: 'Poppins', sans-serif;
+  }
+  body {
+    min-height: 100vh;
+    background: linear-gradient(135deg, #1e3c72, #2a5298);
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 20px;
+  }
+  .container {
+    max-width: 900px;
+    background: rgba(255 255 255 / 0.1);
+    border-radius: 15px;
+    padding: 40px 50px;
+    box-shadow: 0 8px 32px rgba(0,0,0,0.6);
+    backdrop-filter: blur(10px);
+    animation: fadeInUp 1s ease forwards;
+  }
+  h1 {
+    font-weight: 600;
+    font-size: 3.5rem;
+    margin-bottom: 15px;
+    letter-spacing: 2px;
+    text-align: center;
+    text-shadow: 0 4px 10px rgba(0,0,0,0.7);
+  }
+  p.lead {
+    font-weight: 300;
+    font-size: 1.4rem;
+    text-align: center;
+    margin-bottom: 40px;
+    color: #cce7ff;
+    line-height: 1.6;
+  }
+  .features {
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 50px;
+  }
+  .feature {
+    background: rgba(255 255 255 / 0.15);
+    border-radius: 12px;
+    padding: 20px 30px;
+    flex: 1 1 250px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    transition: transform 0.3s ease, background 0.3s ease;
+    cursor: default;
+  }
+  .feature:hover {
+    background: #ff5f6d;
+    background: linear-gradient(45deg, #ff5f6d, #ffc371);
+    transform: translateY(-10px) scale(1.05);
+    box-shadow: 0 15px 30px rgba(255,95,109,0.6);
+  }
+  .feature h3 {
+    margin-bottom: 10px;
+    font-weight: 600;
+    font-size: 1.6rem;
+  }
+  .feature p {
+    font-weight: 300;
+    font-size: 1rem;
+    color: #fff;
+  }
+  .btn {
+    display: block;
+    max-width: 220px;
+    margin: 0 auto;
+    text-align: center;
+    background: #ff5f6d;
+    background: linear-gradient(45deg, #ff5f6d, #ffc371);
+    padding: 15px 0;
+    border-radius: 50px;
+    color: white;
+    font-weight: 600;
+    font-size: 1.2rem;
+    text-decoration: none;
+    box-shadow: 0 10px 25px rgba(255,95,109,0.5);
+    transition: box-shadow 0.3s ease;
+  }
+  .btn:hover {
+    box-shadow: 0 15px 35px rgba(255,195,113,0.8);
+  }
+  
+  @keyframes fadeInUp {
+    from {
+      opacity: 0;
+      transform: translateY(40px);
     }
-
-    body {
-      background: linear-gradient(135deg, #6a11cb, #2575fc);
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      text-align: center;
-      padding: 20px;
+    to {
+      opacity: 1;
+      transform: translateY(0);
     }
+  }
 
-    .container {
-      background: rgba(0,0,0,0.4);
-      padding: 40px 60px;
-      border-radius: 15px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
-      max-width: 600px;
-      width: 100%;
-      transition: transform 0.3s ease;
-    }
-
-    .container:hover {
-      transform: scale(1.05);
-    }
-
+  @media (max-width: 600px) {
     h1 {
-      font-size: 3rem;
-      margin-bottom: 20px;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.5);
+      font-size: 2.5rem;
     }
-
-    p {
-      font-size: 1.3rem;
-      margin-bottom: 30px;
-      line-height: 1.6;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+    .features {
+      flex-direction: column;
+      gap: 20px;
     }
-
-    a.btn {
-      display: inline-block;
-      background: #ff4081;
-      color: white;
-      padding: 15px 30px;
-      border-radius: 50px;
-      text-decoration: none;
-      font-weight: 600;
-      box-shadow: 0 4px 12px rgba(255, 64, 129, 0.5);
-      transition: background 0.3s ease;
-    }
-
-    a.btn:hover {
-      background: #e73370;
-    }
-
-    @media (max-width: 480px) {
-      h1 {
-        font-size: 2rem;
-      }
-      .container {
-        padding: 30px 20px;
-      }
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to My GitHub Page!</h1>
-    <p>This is my first fully styled static site hosted on GitHub Pages.</p>
+    <h1>Welcome to My GitHub Site</h1>
+    <p class="lead">Experience the power of static site hosting with GitHub Pages — fast, free, and beautiful.</p>
+    <div class="features">
+      <div class="feature">
+        <h3>Fast Hosting</h3>
+        <p>Your static content is served directly from GitHub’s CDN for blazing speed worldwide.</p>
+      </div>
+      <div class="feature">
+        <h3>Free & Reliable</h3>
+        <p>No costs involved. GitHub Pages is backed by GitHub’s robust infrastructure.</p>
+      </div>
+      <div class="feature">
+        <h3>Custom Domains</h3>
+        <p>Easily link your own domain name to make your site truly unique and professional.</p>
+      </div>
+    </div>
     <a href="https://github.com/debasish-87" target="_blank" class="btn">Visit My GitHub</a>
   </div>
 </body>
