--- a/index.html
+++ b/index.html
@@ -3,141 +3,317 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>GitHub Pages Site</title>
+<title>Welcome to My GitHub Site</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
 <style>
   /* Reset */
   * {
-    margin: 0; padding: 0; box-sizing: border-box; 
-    font-family: 'Poppins', sans-serif;
+    margin: 0; padding: 0; box-sizing: border-box;
   }
-  body {
-    min-height: 100vh;
-    background: linear-gradient(135deg, #1e3c72, #2a5298);
+  html, body {
+    height: 100%;
+    font-family: 'Poppins', sans-serif;
+    background: #111;
     color: #fff;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+  }
+
+  /* Particle background */
+  #particles {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100vw; height: 100vh;
+    z-index: 0;
+    background: #111;
+  }
+
+  /* Container for content */
+  .container {
+    position: relative;
+    z-index: 10;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 5rem 2rem 6rem; /* increased top padding to avoid nav overlap */
+    text-align: center;
+  }
+
+  /* Navigation */
+  nav {
+    position: fixed;
+    top: 0; left: 0; width: 100%;
+    background: rgba(17, 17, 17, 0.9);
+    padding: 1rem 2rem;
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding: 40px 20px;
+    gap: 3rem;
+    z-index: 20;
+    box-shadow: 0 2px 10px rgba(255, 50, 50, 0.3);
   }
-  .container {
-    max-width: 900px;
-    background: rgba(255 255 255 / 0.1);
-    border-radius: 15px;
-    padding: 40px 50px;
-    box-shadow: 0 8px 32px rgba(0,0,0,0.6);
-    backdrop-filter: blur(10px);
-    animation: fadeInUp 1s ease forwards;
-  }
-  h1 {
+  nav a {
+    color: #ff4f6e;
     font-weight: 600;
-    font-size: 3.5rem;
-    margin-bottom: 15px;
-    letter-spacing: 2px;
-    text-align: center;
-    text-shadow: 0 4px 10px rgba(0,0,0,0.7);
+    text-decoration: none;
+    font-size: 1.1rem;
+    transition: color 0.3s ease;
   }
-  p.lead {
+  nav a:hover,
+  nav a:focus {
+    color: #ff1a3c;
+    outline: none;
+  }
+
+  /* Animated Gradient Heading */
+  h1 {
+    font-size: 4.2rem;
+    font-weight: 700;
+    background: linear-gradient(90deg, #ff4f6e, #fcb045, #ff4f6e);
+    background-size: 200% 200%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: gradientSlide 6s ease infinite;
+    margin-bottom: 1.2rem;
+    text-shadow: 0 0 15px #ff4f6e;
+  }
+  @keyframes gradientSlide {
+    0% { background-position: 0% 50% }
+    50% { background-position: 100% 50% }
+    100% { background-position: 0% 50% }
+  }
+
+  /* Subtitle */
+  p.subtitle {
     font-weight: 300;
-    font-size: 1.4rem;
-    text-align: center;
-    margin-bottom: 40px;
-    color: #cce7ff;
-    line-height: 1.6;
+    font-size: 1.6rem;
+    max-width: 600px;
+    margin: 0 auto 4rem;
+    text-shadow: 0 0 10px rgba(0,0,0,0.6);
+    line-height: 1.4;
   }
+
+  /* Features container */
   .features {
     display: flex;
-    gap: 30px;
-    justify-content: center;
     flex-wrap: wrap;
-    margin-bottom: 50px;
+    gap: 2.5rem;
+    justify-content: center;
+    margin-bottom: 4rem;
   }
+
+  /* Each feature card */
   .feature {
-    background: rgba(255 255 255 / 0.15);
-    border-radius: 12px;
-    padding: 20px 30px;
-    flex: 1 1 250px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-    transition: transform 0.3s ease, background 0.3s ease;
+    background: rgba(255, 255, 255, 0.07);
+    border-radius: 1.25rem;
+    box-shadow: 0 0 20px rgba(255, 79, 110, 0.5);
+    backdrop-filter: blur(15px);
+    border: 1px solid rgba(255, 79, 110, 0.25);
+    padding: 2.25rem 2.5rem;
+    width: 300px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
     cursor: default;
+    color: #ff4f6e;
+    text-align: left;
+    perspective: 800px;
   }
   .feature:hover {
-    background: #ff5f6d;
-    background: linear-gradient(45deg, #ff5f6d, #ffc371);
-    transform: translateY(-10px) scale(1.05);
-    box-shadow: 0 15px 30px rgba(255,95,109,0.6);
+    box-shadow: 0 0 40px #ff1a3c, 0 15px 30px rgba(255, 26, 60, 0.6);
+    transform: translateY(-20px) scale(1.05);
   }
   .feature h3 {
-    margin-bottom: 10px;
-    font-weight: 600;
-    font-size: 1.6rem;
+    margin-bottom: 1rem;
+    font-size: 1.35rem;
+    font-weight: 700;
   }
   .feature p {
     font-weight: 300;
-    font-size: 1rem;
-    color: #fff;
-  }
-  .btn {
-    display: block;
-    max-width: 220px;
-    margin: 0 auto;
-    text-align: center;
-    background: #ff5f6d;
-    background: linear-gradient(45deg, #ff5f6d, #ffc371);
-    padding: 15px 0;
-    border-radius: 50px;
-    color: white;
-    font-weight: 600;
-    font-size: 1.2rem;
-    text-decoration: none;
-    box-shadow: 0 10px 25px rgba(255,95,109,0.5);
-    transition: box-shadow 0.3s ease;
-  }
-  .btn:hover {
-    box-shadow: 0 15px 35px rgba(255,195,113,0.8);
-  }
-  
-  @keyframes fadeInUp {
-    from {
-      opacity: 0;
-      transform: translateY(40px);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
+    font-size: 1.05rem;
+    line-height: 1.6;
   }
 
-  @media (max-width: 600px) {
+  /* Call to action button */
+  .btn-primary {
+    display: inline-block;
+    padding: 1rem 3.5rem;
+    font-weight: 700;
+    font-size: 1.3rem;
+    border-radius: 50px;
+    background: linear-gradient(135deg, #ff4f6e, #fcb045);
+    color: #111;
+    text-decoration: none;
+    box-shadow: 0 0 20px #ff4f6e;
+    cursor: pointer;
+    transition: background 0.3s ease, box-shadow 0.3s ease;
+    animation: bounce 2.5s infinite;
+    margin: 0 auto;
+  }
+  .btn-primary:hover,
+  .btn-primary:focus {
+    background: linear-gradient(135deg, #ff1a3c, #ffa500);
+    box-shadow: 0 0 40px #ff1a3c;
+    outline: none;
+  }
+
+  @keyframes bounce {
+    0%, 100% { transform: translateY(0); }
+    50% { transform: translateY(-10px); }
+  }
+
+  /* Footer */
+  footer {
+    text-align: center;
+    font-weight: 300;
+    opacity: 0.6;
+    font-size: 0.9rem;
+    padding: 2rem 0 1rem;
+    position: relative;
+    z-index: 10;
+  }
+
+  /* Social icons */
+  .social-links {
+    margin-bottom: 0.5rem;
+  }
+  .social-links a {
+    color: #ff4f6e;
+    margin: 0 1rem;
+    font-size: 1.7rem;
+    transition: color 0.3s ease;
+  }
+  .social-links a:hover,
+  .social-links a:focus {
+    color: #ff1a3c;
+    outline: none;
+  }
+
+  /* Responsive adjustments */
+  @media (max-width: 720px) {
     h1 {
-      font-size: 2.5rem;
+      font-size: 3rem;
+    }
+    p.subtitle {
+      font-size: 1.3rem;
+      padding: 0 1rem;
+      margin-bottom: 3rem;
     }
     .features {
       flex-direction: column;
-      gap: 20px;
+      align-items: center;
+      gap: 2rem;
+    }
+    .feature {
+      width: 90%;
+      text-align: center;
+    }
+    .feature p {
+      text-align: center;
+    }
+    nav {
+      gap: 1.5rem;
+      padding: 1rem 1.5rem;
+    }
+    .btn-primary {
+      width: 90%;
+      padding: 1.2rem;
+      font-size: 1.1rem;
     }
   }
 </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Welcome to My GitHub Site</h1>
-    <p class="lead">Experience the power of static site hosting with GitHub Pages — fast, free, and beautiful.</p>
-    <div class="features">
-      <div class="feature">
-        <h3>Fast Hosting</h3>
-        <p>Your static content is served directly from GitHub’s CDN for blazing speed worldwide.</p>
-      </div>
-      <div class="feature">
-        <h3>Free & Reliable</h3>
-        <p>No costs involved. GitHub Pages is backed by GitHub’s robust infrastructure.</p>
-      </div>
-      <div class="feature">
-        <h3>Custom Domains</h3>
-        <p>Easily link your own domain name to make your site truly unique and professional.</p>
-      </div>
-    </div>
-    <a href="https://github.com/debasish-87" target="_blank" class="btn">Visit My GitHub</a>
+
+<!-- Particle background canvas -->
+<canvas id="particles"></canvas>
+
+<!-- Navigation -->
+<nav>
+  <a href="#features">Features</a>
+  <a href="#repo">GitHub Repo</a>
+  <a href="#footer">Contact</a>
+</nav>
+
+<div class="container">
+  <h1>Welcome to My GitHub Site</h1>
+  <p class="subtitle">Experience the power of static site hosting with GitHub Pages — fast, free, and beautifully crafted.</p>
+
+  <section id="features" class="features" aria-label="Features">
+    <article class="feature" tabindex="0">
+      <h3>⚡ Fast Hosting</h3>
+      <p>Your static content is served directly from GitHub’s global CDN, delivering blazing speed worldwide.</p>
+    </article>
+    <article class="feature" tabindex="0">
+      <h3>💸 Free & Reliable</h3>
+      <p>Enjoy zero costs with robust infrastructure maintained by GitHub’s trusted platform.</p>
+    </article>
+    <article class="feature" tabindex="0">
+      <h3>🌐 Custom Domains</h3>
+      <p>Easily connect your own domain and create a unique, professional presence online.</p>
+    </article>
+  </section>
+
+  <a id="repo" href="https://github.com/Debasish-87/github-pages-for-site-hosting" target="_blank" rel="noopener" class="btn-primary" role="button" aria-label="Visit GitHub repository">
+    Visit My GitHub Repo
+  </a>
+</div>
+
+<footer id="footer" role="contentinfo">
+  <div class="social-links" aria-label="Social media links">
+    <a href="https://twitter.com/yourhandle" target="_blank" rel="noopener" aria-label="Twitter">🐦</a>
+    <a href="https://github.com/Debasish-87" target="_blank" rel="noopener" aria-label="GitHub">🐙</a>
+    <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener" aria-label="LinkedIn">🔗</a>
   </div>
+  &copy; 2025 Debasish Mohanty
+</footer>
+
+<!-- You can add your particles.js or any other script here -->
+<script>
+  // Minimal particles effect example (optional)
+  const canvas = document.getElementById('particles');
+  const ctx = canvas.getContext('2d');
+  let width, height, particles = [];
+
+  function init() {
+    resize();
+    particles = [];
+    for(let i=0; i<100; i++) {
+      particles.push({
+        x: Math.random()*width,
+        y: Math.random()*height,
+        r: Math.random()*2+1,
+        dx: (Math.random()-0.5)*1.2,
+        dy: (Math.random()-0.5)*1.2
+      });
+    }
+  }
+
+  function resize() {
+    width = window.innerWidth;
+    height = window.innerHeight;
+    canvas.width = width;
+    canvas.height = height;
+  }
+
+  function animate() {
+    ctx.clearRect(0,0,width,height);
+    ctx.fillStyle = 'rgba(255,79,110,0.7)';
+    particles.forEach(p => {
+      p.x += p.dx;
+      p.y += p.dy;
+      if(p.x < 0 || p.x > width) p.dx = -p.dx;
+      if(p.y < 0 || p.y > height) p.dy = -p.dy;
+      ctx.beginPath();
+      ctx.arc(p.x, p.y, p.r, 0, Math.PI*2);
+      ctx.fill();
+    });
+    requestAnimationFrame(animate);
+  }
+
+  window.addEventListener('resize', () => {
+    resize();
+  });
+
+  init();
+  animate();
+</script>
+
 </body>
 </html>
